[gd_scene load_steps=5 format=3 uid="uid://b5lir0la5iv8c"]

[ext_resource type="Script" uid="uid://dotayt7fvx7wf" path="res://cutscenes/Transitions/chapter_3_question.gd" id="1_kq057"]
[ext_resource type="PackedScene" uid="uid://spmgx5dgdnj5" path="res://sprites/Eden/eden.tscn" id="2_e4fkr"]
[ext_resource type="FontFile" uid="uid://cg0depop5oab6" path="res://fonts/AlegreyaSans-Black.ttf" id="3_a30e7"]
[ext_resource type="PackedScene" uid="uid://bjm2suicq3gx7" path="res://dialogs/choice_button.tscn" id="4_avcav"]

[node name="Chapter3Question" type="Node2D"]
script = ExtResource("1_kq057")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Eden" parent="." instance=ExtResource("2_e4fkr")]
position = Vector2(900, 800)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 182.0
offset_right = 1730.0
offset_bottom = 403.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_a30e7")
theme_override_font_sizes/font_size = 64
text = "She didn't seem particularly truthful on that last one. Eli will have to come up with a witty response ."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ChoiceButtonFO" parent="." instance=ExtResource("4_avcav")]
offset_left = 600.0
offset_top = 430.0
offset_right = 1588.0
offset_bottom = 471.0
theme_override_font_sizes/font_size = 32
text = "You may or may not have stolen those tickets, but you’ve definitely stolen my heart, care to give it
back or do you think you’ll keep it ? (Attempt romance under a streetlight, because why not?)"

[node name="ChoiceButtonE3" parent="." instance=ExtResource("4_avcav")]
offset_left = 650.0
offset_top = 580.0
offset_right = 1720.0
offset_bottom = 621.0
theme_override_font_sizes/font_size = 32
text = "No need, I’m actually the DJ's long lost cousin (Lie with zero planning and maximum confidence)"

[node name="ChoiceButtonE4" parent="." instance=ExtResource("4_avcav")]
offset_left = 700.0
offset_top = 730.0
offset_right = 1688.0
offset_bottom = 771.0
theme_override_font_sizes/font_size = 32
text = "Well actually it's getting past my bedtime so i’ll just head back home (Leave)"

[connection signal="pressed" from="ChoiceButtonFO" to="." method="_on_choice_button_fo_pressed"]
[connection signal="pressed" from="ChoiceButtonE3" to="." method="_on_choice_button_e_3_pressed"]
[connection signal="pressed" from="ChoiceButtonE4" to="." method="_on_choice_button_e_4_pressed"]
